ros_ws/log/build_2023-10-16_17-09-55/camera_sensor/stderr.log
  File "/home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor/camera_node.py", line 32
    break
    ^
SyntaxError: 'break' outside loop

